--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "6",
     "babel-preset-stage-0": "^6.24.1",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^3.1.11"
